// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getEnrichedInstanceData > should be able to enrich the instance data with all the defaults for Android ChromeDriver with no shadow padding 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": true,
  "isAndroidChromeDriverScreenshot": true,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": false,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "Android",
  "platformVersion": "8.0",
  "toolBarShadowPadding": 0,
}
`;

exports[`getEnrichedInstanceData > should be able to enrich the instance data with all the defaults for Android Native Webscreenshot with no shadow padding 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": true,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": true,
  "isIOS": false,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": true,
  "platformName": "Android",
  "platformVersion": "8.0",
  "toolBarShadowPadding": 0,
}
`;

exports[`getEnrichedInstanceData > should be able to enrich the instance data with all the defaults for desktop with no shadow padding 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": false,
  "isMobile": false,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": false,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "platformName",
  "platformVersion": "platformVersion",
  "toolBarShadowPadding": 0,
}
`;

exports[`getEnrichedInstanceData > should be able to enrich the instance data with all the defaults for iOS with shadow padding 1`] = `
{
  "addressBarShadowPadding": 6,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": true,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "iOS",
  "platformVersion": "12.4",
  "toolBarShadowPadding": 15,
}
`;

exports[`getEnrichedInstanceData > should handle Android with shadow padding enabled 1`] = `
{
  "addressBarShadowPadding": 6,
  "appName": "not_known",
  "browserName": "Chrome",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": true,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": true,
  "isIOS": false,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": true,
  "platformName": "Android",
  "platformVersion": "10.0",
  "toolBarShadowPadding": 6,
}
`;

exports[`getEnrichedInstanceData > should handle case-insensitive platform names 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": true,
  "isAndroidChromeDriverScreenshot": true,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": false,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "ANDROID",
  "platformVersion": "12.0",
  "toolBarShadowPadding": 6,
}
`;

exports[`getEnrichedInstanceData > should handle iOS home bar padding calculation 1`] = `
{
  "addressBarShadowPadding": 6,
  "appName": "not_known",
  "browserName": "Safari",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": true,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "iOS",
  "platformVersion": "16.0",
  "toolBarShadowPadding": 19,
}
`;

exports[`getEnrichedInstanceData > should handle native context without browserName 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": true,
  "isMobile": true,
  "isTestInBrowser": false,
  "isTestInMobileBrowser": false,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "iOS",
  "platformVersion": "15.0",
  "toolBarShadowPadding": 0,
}
`;

exports[`getEnrichedInstanceData > should handle test in mobile browser scenario 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "Chrome",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": true,
  "isAndroidChromeDriverScreenshot": true,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": false,
  "isMobile": true,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": true,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "Android",
  "platformVersion": "11.0",
  "toolBarShadowPadding": 0,
}
`;

exports[`getEnrichedInstanceData > should handle unknown platform name 1`] = `
{
  "addressBarShadowPadding": 0,
  "appName": "not_known",
  "browserName": "browserName",
  "browserVersion": "browserVersion",
  "deviceName": "deviceName",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "dimensions": {
    "body": {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isEmulated": false,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isAndroidChromeDriverScreenshot": false,
  "isAndroidNativeWebScreenshot": false,
  "isIOS": false,
  "isMobile": false,
  "isTestInBrowser": true,
  "isTestInMobileBrowser": false,
  "logName": "logName",
  "name": "name",
  "nativeWebScreenshot": false,
  "platformName": "Windows",
  "platformVersion": "10",
  "toolBarShadowPadding": 0,
}
`;
